# daedalus

./: .gitignore  .landmark.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  DESIGN.md  README.md  ROADMAP.md  VISION.md
approvals/: G1-launch-contract.md  G1-pr-review-suite.md  G1-pr-review.md  G2-launch-contract-v0.md  G2-pr-review-master-v0.md  G2-pr-review-specialists-v0.md  G2-pr-review-v0.md  G2-pr-review-v2.md  G3-launch-contract-g2b-g1a-seed2-glm-4-7-flash-spec-first.md  G3-pr-review-seed4-qwen3-7-plus-checklist.md  G4-pr-review-write-authority.md  G5-pr-review-production-reingestion.md
backlog.d/: 003-candidate-env-isolation.md  008-arena-schema-v02.md  010-judge-scorer-family.md  011-answer-key-adjudication.md  012-visual-qa-arena-decision.md  013-runs-retention-and-flush.md  015-non-oneshot-arena-mechanism.md  017-search-space-and-diverse-seeding.md  020-adaptive-certification-racing.md  021-mode-aware-search-objective.md  023-expanded-composition-surface.md  024-run-lineage-and-lab-notebook.md  027-arena-scale-up.md  028-certify-pr-review-v2-agent-spread.md  029-launch-pr-review-agent-under-signed-gates.md  030-build-second-task-family.md  031-build-arena-authoring-workbench.md  032-make-daedalus-cold-start-operable.md  033-harden-isolation-and-contract-validation.md  034-build-daedalus-review-swarm.md  034-build-threshold-review-swarm.md  035-production-trace-flywheel-g5.md  036-request-bitterblossom-ad-hoc-dispatch-agent-pack.md  037-request-bitterblossom-reflex-review-orchestrator-swarm.md  038-request-bitterblossom-vcs-native-trigger-experiment.md  039-prove-better-not-just-rank.md  040-arena-validity-contamination.md  041-operator-trust-cost-surface.md  042-purge-stale-python-refs.md  043-private-pr-review-holdout.md  044-run-observability-visual-layer.md  045-rust-validation-kernel.md  046-export-cerberus-reviewer-config-packet.md  047-replace-real-repo-saturation-probe.md  048-build-cerberus-substrate-rd-lab.md  049-daedalus-view-live-run-surface.md  050-live-tui-cockpit.md  051-air-gapped-holdout-more-clusters.md  052-capability-surface-search.md  052-certified-substrate-comparison.md  (+17 more)
candidates/: baseline-oneshot.toml  null.toml  oracle.toml  pi-kimi.toml  probe-oneshot.toml
crates/daedalus-cli/: Cargo.toml
crates/daedalus-cli/src/: main.rs
crates/daedalus-cli/tests/: cli_parity.rs
crates/daedalus-core/: Cargo.toml
crates/daedalus-core/assets/: VENDORED.md  aesthetic.css  lab.css
crates/daedalus-core/src/: cerberus.rs  cerberus_lab.rs  compare.rs  doctor.rs  export.rs  forecast.rs  judge.rs  launch.rs  lib.rs  lineage.rs  mutate.rs  port_harbor.rs  pycompat.rs  report.rs  report_html.rs  run.rs  score.rs  search_loop.rs  seed.rs  stats.rs  swarm.rs  taxonomy.rs  trace.rs  validate.rs  view.rs  workbench.rs
crates/daedalus-core/src/cerberus_lab/: digest.rs  report.rs
crates/daedalus-core/src/report_html/: mod.rs  render.rs
crates/daedalus-core/tests/: ci_contract.rs  parity_doctor.rs  parity_export.rs  parity_judge.rs  parity_launch.rs  parity_lineage.rs  parity_loop.rs  parity_mutate.rs  parity_port_harbor.rs  parity_prompt_packet.rs  parity_pycompat.rs  parity_pyrandom.rs  parity_report.rs  parity_run.rs  parity_run_e2e.rs  parity_score.rs  parity_seed.rs  parity_swarm.rs  parity_taxonomy.rs  parity_trace.rs  parity_workbench.rs
crates/daedalus-score/: Cargo.toml
crates/daedalus-score/src/: main.rs
crates/threshold-cli/: Cargo.toml
crates/threshold-cli/src/: main.rs
crates/threshold-core/: Cargo.toml
crates/threshold-core/assets/: VENDORED.md  lab.css
crates/threshold-core/src/: cerberus.rs  cerberus_lab.rs  doctor.rs  export.rs  forecast.rs  judge.rs  launch.rs  lib.rs  lineage.rs  mutate.rs  optimization_target.rs  port_harbor.rs  prompt_packet.rs  pyrandom.rs  report.rs  run.rs  score.rs  search_loop.rs  seed.rs  stats.rs  swarm.rs  taxonomy.rs  trace.rs  validate.rs  view.rs  workbench.rs
crates/threshold-core/src/cerberus_lab/: report.rs
crates/threshold-core/src/report_html/: mod.rs  render.rs
crates/threshold-core/tests/: ci_contract.rs  parity_pycompat.rs  parity_pyrandom.rs
crates/threshold-score/: Cargo.toml
crates/threshold-score/src/: main.rs
docs/: 046-cerberus-reviewer-config-export-plan.html  047-saturation-probe-plan.html  048-cerberus-rd-lab-context.md  048-cerberus-rd-lab-shape.html  adr-001-harbor-builtin-pi.md  adr-002-langfuse-trace-sink.md  adr-003-visual-qa-arena.md  adr-004-review-swarm-contract.md  arena-workbench.md  crucible-eval-optimization-contract.md  daedalus-ui-catalog.html  landmark-integration.md  operator-sop.md  philosophy.md  primitives.md  review-autoresearch-loop.md  review-swarm-taxonomy.md  review-swarm-vertical-slice.md  rust-migration.md  security-posture.md  threshold-ui-catalog.html  vocabulary.md
packets/: contract-review-v1.md  reviewer-v1.md
rubrics/: review-quality-v1.md
runner/: doctor.py  export.py  judge.py  launch.py  lineage.py  loop.py  mutate.py  port_harbor.py  prompt_packet.py  report.py  run.py  (+6 more)
(+889 files in other folders)
