[workspace]
resolver = "2"
members = ["crates/daedalus-core", "crates/daedalus-cli"]

# The Rust port of Daedalus. The Python `runner/` package and `bin/daedalus`
# are migrated one parity-verified module at a time; see docs/rust-migration.md
# for the module DAG, status, and the Python-vs-Rust parity oracle each port
# ships behind. Both gates (cargo test + bin/gate) stay green during the
# transition.

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
# preserve_order keeps JSON object keys in insertion order, matching Python's
# dict ordering — required for faithful (and byte-reproducible) artifacts.
serde_json = { version = "1", features = ["preserve_order"] }
toml = "0.8"
sha2 = "0.10"
regex = "1"
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
daedalus-core = { path = "crates/daedalus-core" }
