[workspace]
resolver = "2"
members = ["crates/daedalus-core", "crates/daedalus-cli", "crates/daedalus-score"]

# Daedalus is Rust-owned. docs/rust-migration.md is the historical migration
# ledger for the retired Python runner and shell CLI; current workflow commands
# are `cargo run --quiet --bin daedalus -- ...`, `bin/gate`, and
# `bin/harbor-run`.

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
# preserve_order keeps JSON object keys in insertion order, matching Python's
# dict ordering — required for faithful (and byte-reproducible) artifacts.
serde_json = { version = "1", features = ["preserve_order"] }
toml = "0.8"
sha2 = "0.10"
regex = "1"
clap = { version = "4", features = ["derive"] }
ureq = { version = "2", features = ["json"] }
daedalus-core = { path = "crates/daedalus-core" }
