[package]
name = "daedalus-score"
version.workspace = true
edition.workspace = true
description = "Tiny static scorer binary — drop-in replacement for runner/score.py in the Harbor container."

[[bin]]
name = "daedalus-score"
path = "src/main.rs"

[dependencies]
daedalus-core = { path = "../daedalus-core", default-features = false }
serde_json = { workspace = true }
